# elrpy

./: LICENSE  README.md  binary_sim copy.ipynb  binary_sim.ipynb  fit_ebr.py  julia_timing.ipynb  pyproject.toml
elrpy/: __init__.py  bfgs.py  dgp.py  inference.py  joint.py  losses.py  marginals.py  models.py  optim.py  rays.py  scipy_optim.py  shifting.py  sim.py  synthetic.py  torch_tests.ipynb  utils.py
elrpy/data/: __init__.py  data.py  np_utils.py  pd_utils.py  utils.py
tests/: test_inference.py  test_marginals.py  test_rays.py  test_sparse_api.py
