[project]
name = "elrpy"
version = "0.0.4"
authors = [
  { name="Nic Fishman", email="njwfish@gmail.com" },
]
description = "A lightweight package for individual level inference in elections backed by jax."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas", "numpy", "jax", "jaxlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DataforProgress/elrpy/"
"Bug Tracker" = "https://github.com/DataforProgress/elrpy/tree/issues"
