[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elrpy"
version = "0.0.5"
authors = [
  { name="Nic Fishman", email="njwfish@gmail.com" },
]
description = "A lightweight package for individual-level ecological regression backed by JAX."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "jax",
    "jaxlib",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/njwfish/elrpy/"
"Bug Tracker" = "https://github.com/njwfish/elrpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["elrpy"]
